// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ItemListDisplay component is rendered with an empty array 1`] = `
<BrowserRouter>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "createHref": [Function],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <Provider
      store={
        Object {
          "clearActions": [Function],
          "dispatch": [Function],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        }
      }
    >
      <ItemListDisplay
        items={Array []}
      >
        <ul
          className="itemsList"
          id="list"
        />
      </ItemListDisplay>
    </Provider>
  </Router>
</BrowserRouter>
`;

exports[`ItemListDisplay component is rendered with array of one 1`] = `
<BrowserRouter>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "createHref": [Function],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <Provider
      store={
        Object {
          "clearActions": [Function],
          "dispatch": [Function],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        }
      }
    >
      <ItemListDisplay
        items={
          Array [
            Object {
              "id": 3,
              "name": "testname",
              "price": 3,
              "quantity": 4,
            },
          ]
        }
      >
        <ul
          className="itemsList"
          id="list"
        >
          <div
            className="itemCard"
            key="3"
          >
            <Link
              key="3"
              to="/products/3"
            >
              <LinkAnchor
                href="/products/3"
                navigate={[Function]}
              >
                <a
                  href="/products/3"
                  onClick={[Function]}
                >
                  <ItemDisplay
                    item={
                      Object {
                        "id": 3,
                        "name": "testname",
                        "price": 3,
                        "quantity": 4,
                      }
                    }
                  >
                    <li
                      className="flex-centered"
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                    >
                      <div
                        className="picture"
                      />
                      <div
                        className="detailsSmall flex-centered"
                      >
                        <div
                          className="name"
                        >
                          testname
                        </div>
                        <div
                          className="price"
                        >
                          3
                        </div>
                      </div>
                    </li>
                  </ItemDisplay>
                </a>
              </LinkAnchor>
            </Link>
          </div>
        </ul>
      </ItemListDisplay>
    </Provider>
  </Router>
</BrowserRouter>
`;

exports[`ItemListDisplay component is rendered with array of some 1`] = `
<BrowserRouter>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "createHref": [Function],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <Provider
      store={
        Object {
          "clearActions": [Function],
          "dispatch": [Function],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        }
      }
    >
      <ItemListDisplay
        items={
          Array [
            Object {
              "id": 3,
              "name": "testname",
              "price": 3,
              "quantity": 4,
            },
            Object {
              "id": 4,
              "name": "postname",
              "price": 2,
              "quantity": 8,
            },
          ]
        }
      >
        <ul
          className="itemsList"
          id="list"
        >
          <div
            className="itemCard"
            key="3"
          >
            <Link
              key="3"
              to="/products/3"
            >
              <LinkAnchor
                href="/products/3"
                navigate={[Function]}
              >
                <a
                  href="/products/3"
                  onClick={[Function]}
                >
                  <ItemDisplay
                    item={
                      Object {
                        "id": 3,
                        "name": "testname",
                        "price": 3,
                        "quantity": 4,
                      }
                    }
                  >
                    <li
                      className="flex-centered"
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                    >
                      <div
                        className="picture"
                      />
                      <div
                        className="detailsSmall flex-centered"
                      >
                        <div
                          className="name"
                        >
                          testname
                        </div>
                        <div
                          className="price"
                        >
                          3
                        </div>
                      </div>
                    </li>
                  </ItemDisplay>
                </a>
              </LinkAnchor>
            </Link>
          </div>
          <div
            className="itemCard"
            key="4"
          >
            <Link
              key="4"
              to="/products/4"
            >
              <LinkAnchor
                href="/products/4"
                navigate={[Function]}
              >
                <a
                  href="/products/4"
                  onClick={[Function]}
                >
                  <ItemDisplay
                    item={
                      Object {
                        "id": 4,
                        "name": "postname",
                        "price": 2,
                        "quantity": 8,
                      }
                    }
                  >
                    <li
                      className="flex-centered"
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                    >
                      <div
                        className="picture"
                      />
                      <div
                        className="detailsSmall flex-centered"
                      >
                        <div
                          className="name"
                        >
                          postname
                        </div>
                        <div
                          className="price"
                        >
                          2
                        </div>
                      </div>
                    </li>
                  </ItemDisplay>
                </a>
              </LinkAnchor>
            </Link>
          </div>
        </ul>
      </ItemListDisplay>
    </Provider>
  </Router>
</BrowserRouter>
`;

exports[`itemDisplay component is rendered 1`] = `
<BrowserRouter>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "createHref": [Function],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <Provider
      store={
        Object {
          "clearActions": [Function],
          "dispatch": [MockFunction],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        }
      }
    >
      <ItemDisplay
        item={
          Object {
            "id": 3,
            "name": "pierre",
            "price": 3,
            "quantity": 4,
          }
        }
      >
        <li
          className="flex-centered"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          <div
            className="picture"
          />
          <div
            className="detailsSmall flex-centered"
          >
            <div
              className="name"
            >
              pierre
            </div>
            <div
              className="price"
            >
              3
            </div>
          </div>
        </li>
      </ItemDisplay>
    </Provider>
  </Router>
</BrowserRouter>
`;
